Fix image alignment in publications

--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -1,6 +1,6 @@
 .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
 .social-icons a{
   display:inline-block;
@@ -383,7 +383,7 @@ footer {
 
   .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
   div.wrapper {
     width:auto;
@@ -442,7 +442,7 @@ footer {
 
   .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
   header {
     padding:0;
@@ -461,7 +461,7 @@ footer {
 
   .pub-row {
     display: block; 
-    align-items: center;}
+    align-items: flex-start;}
 
   body {
     padding:15px;
