--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -1,6 +1,6 @@
 .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
 .social-icons a{
   display:inline-block;
@@ -462,7 +462,7 @@ footer {
 
   .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
   div.wrapper {
     width:auto;
@@ -521,7 +521,7 @@ footer {
 
   .pub-row {
   display: flex; 
-  align-items: center;}
+  align-items: flex-start;}
 
   header {
     padding:0;
@@ -540,7 +540,7 @@ footer {
 
   .pub-row {
     display: block; 
-    align-items: center;}
+    align-items: flex-start;}
 
   body {
     padding:15px;
